Feat: implement game player handling
