# src/routes/game.routes.js
@@ -8,6 +8,7 @@ const gameSchema = require('../schemas/game.schema');
 router.get('/games/:id', gameController.getGameById);
 router.post('/games', authMiddleware, structureMiddleware(gameSchema), gameController.addGame);
 router.put('/games/:id', authMiddleware, structureMiddleware(gameSchema), gameController.updateGame);
+router.put('/games/:id/start', authMiddleware, gameController.startGame);
 router.delete('/games/:id', authMiddleware, gameController.deleteGame);
 
 module.exports = router;
